first design of site made

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-color:black;">
+    <div class="options">
+        <div class="option">Rock</div>
+        <div class="option">Paper</div>
+        <div class="option">Scissors</div>
+    </div>
+    <div class="score">
+        <div class="humanScore">
+            <div class="humanScoreText">Human Wins</div>
+            <div class="humanDisplayScore">5</div>
+        </div>
+        <div Class="computerScore">
+            <div class="computerScoreText">Computer Wins</div>
+            <div class="computerDisplayScore">5</div>
+        </div>
+    </div>
+
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
