Added basic functionality

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 <body style="background-color:black;">
     <div class="options">
-        <div class="option">Rock</div>
-        <div class="option">Paper</div>
-        <div class="option">Scissors</div>
+        <div class="option rock">Rock</div>
+        <div class="option paper">Paper</div>
+        <div class="option scissors">Scissors</div>
     </div>
-    <div class="score">
-        <div class="humanScore">
-            <div class="humanScoreText">Human Wins</div>
-            <div class="humanDisplayScore">5</div>
-        </div>
-        <div Class="computerScore">
-            <div class="computerScoreText">Computer Wins</div>
-            <div class="computerDisplayScore">5</div>
+    <div class="scoreBox">
+        <div class="result"></div>
+        <div class="scores">
+            <div class="humanScore">
+                <div class="humanScoreText">Human Wins</div>
+                <div class="humanDisplayScore">0</div>
+            </div>
+            <div Class="computerScore">
+                <div class="computerScoreText">Computer Wins</div>
+                <div class="computerDisplayScore">0</div>
+            </div>
         </div>
     </div>
 
