--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color:black;">
+    <div class="topBar">
+        <div class="restart">Restart</div>
+        <div class="settings">Settings</div>
+    </div>
+ 
     <div class="options">
         <div class="option rock">Rock</div>
         <div class="option paper">Paper</div>
@@ -17,12 +22,27 @@
         <div class="result"></div>
         <div class="scores">
             <div class="humanScore">
-                <div class="humanScoreText">Human Wins</div>
+                <div class="humanScoreText">You</div>
                 <div class="humanDisplayScore">0</div>
             </div>
             <div Class="computerScore">
-                <div class="computerScoreText">Computer Wins</div>
+                <div class="computerScoreText">Computer</div>
                 <div class="computerDisplayScore">0</div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="myModal">
+        <div class="modalContent">
+            <span class="close">&times;</span>
+            <p class="modalText">If you see this text something is wrong.</p>
+        </div>
+    </div>
+    <div class="settingsModal">
+        <div class="settingsModalContent">
+            <span class="closeSettings">&times;</span>
+            <div class="settingsSection">
+                <div class="humanVsComputerSetting">Human VS. Computer</div>
+                <div class="humanVsHumanSetting">Human VS. Human</div>
             </div>
         </div>
     </div>
