Human vs human added

--- a/humanVsHuman.html
+++ b/humanVsHuman.html
@@ -12,6 +12,8 @@
         <div class="restart">Restart</div>
         <div class="settingsButton">Settings</div>
     </div>
+    <div class="playerTurn">Player 1</div>
+
     <div class="options">
         <div class="option rock">Rock</div>
         <div class="option paper">Paper</div>
@@ -21,11 +23,11 @@
         <div class="result"></div>
         <div class="scores">
             <div class="humanScore">
-                <div class="humanScoreText">You</div>
+                <div class="humanScoreText">Player 1</div>
                 <div class="humanDisplayScore">0</div>
             </div>
             <div Class="computerScore">
-                <div class="computerScoreText">Computer</div>
+                <div class="computerScoreText">Player 2</div>
                 <div class="computerDisplayScore">0</div>
             </div>
         </div>
@@ -40,12 +42,12 @@
         <div class="settingsModalContent">
             <span class="closeSettings">&times;</span>
             <div class="settingsSection">
-                <div class="humanVsComputerSetting" id="humanVsComputer">Human VS. Computer</div>
-                <div class="humanVsHumanSetting" id="humanVsHuman"><a href="./humanVsHuman.html">Human VS. Human</a></div>
+                <div class="humanVsComputerSetting" id="humanVsComputer"><a href="./index.html">Human VS. Computer</a></div>
+                <div class="humanVsHumanSetting" id="humanVsHuman">Human VS. Human</div>
             </div>
         </div>
     </div>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="humanVsHuman.js" type="text/javascript"></script>
 </body>
 </html>
